// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: admin actions 1`] = `
<div
  className="layout-page-header-panel layout-page-main-header issues-main-header"
>
  <div
    className="layout-page-header-panel-inner layout-page-main-header-inner"
  >
    <div
      className="layout-page-main-inner"
    >
      <div
        className="pull-left display-flex-center"
      >
        <h2>
          qualitygate
        </h2>
      </div>
      <div
        className="pull-right"
      >
        <ModalButton
          modal={[Function]}
        >
          <Component />
        </ModalButton>
        <ModalButton
          modal={[Function]}
        >
          <Component />
        </ModalButton>
        <Button
          className="little-spacer-left"
          id="quality-gate-toggle-default"
          onClick={[Function]}
        >
          set_as_default
        </Button>
        <withRouter(DeleteQualityGateForm)
          onDelete={[MockFunction]}
          qualityGate={
            Object {
              "actions": Object {
                "copy": true,
                "delete": true,
                "rename": true,
                "setAsDefault": true,
              },
              "id": 1,
              "name": "qualitygate",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly: built-in 1`] = `
<div
  className="layout-page-header-panel layout-page-main-header issues-main-header"
>
  <div
    className="layout-page-header-panel-inner layout-page-main-header-inner"
  >
    <div
      className="layout-page-main-inner"
    >
      <div
        className="pull-left display-flex-center"
      >
        <h2>
          qualitygate
        </h2>
        <BuiltInQualityGateBadge
          className="spacer-left"
        />
      </div>
      <div
        className="pull-right"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: default 1`] = `
<div
  className="layout-page-header-panel layout-page-main-header issues-main-header"
>
  <div
    className="layout-page-header-panel-inner layout-page-main-header-inner"
  >
    <div
      className="layout-page-main-inner"
    >
      <div
        className="pull-left display-flex-center"
      >
        <h2>
          qualitygate
        </h2>
      </div>
      <div
        className="pull-right"
      />
    </div>
  </div>
</div>
`;
